07_retirement/grade.txt
Grading at Mon Apr 19 13:17:43 UTC 2021
Attempting to compile retirement.c
retirement.c:32:7: error: return type of ‘main’ is not ‘int’ [-Werror=main]
 void  main (){
       ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
